# mp3gain-revival

./: .gitignore  .rgignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  NEXT_DEV_MESSAGE.md  PLAN_GUI.md  PROJECT.md  README.md  ROADMAP.md  STATUS.md  vcpkg.json
.github/workflows/: ci.yml
archive/: README.md
archive/site/: MP3Gain Downloads.html  MP3Gain Translations.html  MP3Gain.html  Replay Gain - A proposed standard.html  mpg123, Fast MP3 Player for Linux and UNIX systems.html
archive/site/Replay Gain - A proposed standard_files/: style1.css
archive/site/mpg123, Fast MP3 Player for Linux and UNIX systems_files/: 02.css
docs/: ARCHITECTURE.md  AUDIT_2026-03-27.md  BUILD.md  RELEASE.md  RELEASE_CANDIDATE.md  RELEASE_PUBLISH_PLAN.md  VALIDATION.md
gui/: AboutWindow.axaml  AboutWindow.axaml.cs  App.axaml  App.axaml.cs  MP3FileItem.cs  MP3GainEngine.cs  MP3GainUI.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
project/: CMakeLists.txt  README.md  apetag.c  cli.c  cli.h  exec.c  exec.h  id3tag.c  mp3gain.c  mp3gain.rc.in  mp3gain_config.h  prep.c  prep.h  process.c  process.h  rg_error.h
scripts/: package_release.ps1
test/: probe_corruptions.ps1  probe_corruptions.results.json  run_test.bat  smoke_test.sh
test/fixtures/: README.md
